# esms

./: .env  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  index.html  init.sql  nginx.conf  setup.ps1  setup.sh  setup.sh 
.devcontainer/: devcontainer.json
.github/workflows/: ci-cd.yml
Aurdino/: aurdinouno.ino
backend/: .env.dev  .env.prod  .env.staging  Cargo.toml  Dockerfile  LOGGING.md
backend/benches/: stress_calculation.rs
backend/fuzz/: Cargo.toml
backend/fuzz/fuzz_targets/: fuzz_parse_sensor.rs  fuzz_stress_index.rs
backend/migrations/: 0001_create_sensor_data_table.sql
backend/src/: api.rs  background.rs  business.rs  business_tests.rs  config.rs  d-t-e-p.rs  dipen.rs  error.rs  lib.rs  main.rs  models.rs  retry.rs  sensor.rs  state.rs  storage.rs
backend/tests/: api_integration_tests.rs  api_tests.rs  model_validation_tests.rs  redis_mysql_tests.rs  retry_tests.rs
frontend/: nginx.conf
hooks/: README.md  precommit
