[package]
name = "esms-backend"
version = "1.0.0"
edition = "2021"

[dependencies]
actix-web = "4.9"
actix-cors = "0.7"
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.38", features = ["serde"] }
tokio-serial = "5.4"
rand = "0.8"

# New dependencies for databases
mysql_async = "0.30"               # MySQL async driver
redis = { version = "0.26", features = ["tokio-comp"] }   # Redis async
uuid = { version = "1.3", features = ["v4"] }    
        # For unique IDs in FHIR observations