[package]
name = "esms-backend"
version = "1.0.0"
edition = "2021"
description = "Environmental Stress Monitoring System - Real-time sensor data processing backend for healthcare applications"
license = "MIT"
repository = "https://github.com/YOUR_USERNAME/esms"
readme = "../README.md"
keywords = ["healthcare", "sensor", "monitoring", "fhir", "stress-analysis"]
categories = ["web-programming", "healthcare"]
authors = ["Your Name <your.email@example.com>"]

[dependencies]
actix-web = "4.9"
actix-cors = "0.7"
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.38", features = ["serde"] }
tokio-serial = "5.4"
rand = "0.8"
futures = "0.3"

# New dependencies for databases
mysql_async = "0.30"               # MySQL async driver
redis = { version = "0.26", features = ["tokio-comp"] }   # Redis async
uuid = { version = "1.3", features = ["v4"] } 
dotenv = "0.15"

# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# validation
validator = { version = "0.18", features = ["derive"] }

# errors
thiserror = "1"

# security / middleware
actix-web-lab = "0.20"

# graceful shutdown
tokio-util = "0.7"

jsonwebtoken = "8"
actix-web-httpauth = "0.7"

serialport = "4.8"

url = "2.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true


